# cleo

./: .gitignore  Makefile  README.md  cleo.py  cleo.sh  client_secrets.json  cls.sh  cls_def.py  cls_defs.py  clsim.sh  docker-compose.yml  execWRF.sh  index.html  msq_160.py  msq_160.sh  pyproject.toml  requirements.txt  teste.txt  worker.py  worker.sh  wrk_160.py  wrk_160.sh  wrk_email.py  wrk_upload.py
.github/workflows/: .#clsim-app.yml  clsim-app.yml
cleo/: basic_ack.snip  cleo.py  cleo_defs.py  cleo_pika.py  cls_defs.py  st_cleo.py  worker.py  wrf_defs.py  wrk_email.py
cls/: cls_defs.py  st_cli.py  st_cls.py  worker.py  wrf_defs.py  wrk_email.py
clsim/: cls_defs.py  clsim_cli.py  clsim_gui.py  worker.py  wrf_defs.py  wrk_email.py
jobs/: 1654871639.json  1654871699.json  1654871834.json  1654871854.json
tests/: test_cls.py  test_worker.py
